--- a/app.config.json
+++ b/app.config.json
@@ -1,3 +1,3 @@
 {
-  "app_url": "https://vnghia1308.github.io/lcu/app/3.0.2-20250301"
+  "app_url": "https://vnghia1308.github.io/lcu/app/3.0.2-20250301_1"
 }
